--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "external-secrets-cli",
+  "name": "kubernetes-external-secrets-cli",
   "version": "0.0.3",
-  "description": "CLI for manipulating ExternalSecrets",
+  "description": "CLI for manipulating Kubernetes ExternalSecrets",
   "main": "index.js",
   "bin": {
-    "escli": "bin/cli.js"
+    "kescli": "bin/cli.js"
   },
   "scripts": {
     "release": "standard-version --tag-prefix=''",
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/silasbw/external-secrets-cli.git"
+    "url": "git+https://github.com/silasbw/kubernetes-external-secrets-cli.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/silasbw/external-secrets-cli/issues"
+    "url": "https://github.com/silasbw/kubernetes-external-secrets-cli/issues"
   },
-  "homepage": "https://github.com/silasbw/external-secrets-cli#readme",
+  "homepage": "https://github.com/silasbw/kubernetes-external-secrets-cli#readme",
   "dependencies": {
     "js-yaml": "^3.12.2"
   },
